# templates

./: README.md
assets/css/: app.css
assets/gitignore/python/: .gitignore
assets/linux/: .bash_aliases  .bashrc  .imwheelrc
assets/linux/desktop/: eclipse.desktop  jetbrains-idea-ce.desktop  jetbrains-pycharm-ce.desktop  sts.desktop  tilix2p.desktop  tilix6p.desktop
assets/projects/pycine-next-docker/: Dockerfile  README.md  main.py  pyproject.toml  run.sh
assets/projects/typer-cli/: .gitignore  README.md  build_install  env_example  pyproject.toml  start  uninstall_clean
assets/projects/typer-cli/ava/: __init__.py  app_cli.py  settings.toml  typer_custom.py  utils.py
assets/projects/typer-cli/ava/cli/: __init__.py  debug.py
assets/projects/typer-cli/tests/: test_unzip.py
