[project]
name = "pycine-next"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.9",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "uvicorn>=0.34.0",
]
